gdk/gdkwindow.c
@@ -5972,6 +5972,24 @@ gdk_window_move_resize_toplevel (GdkWindow *window,
   _gdk_synthesize_crossing_events_for_geometry_change (window);
 }
 
+static void
+configure_native_child (GdkWindow *window)
+{
+  GdkDisplay *display;
+  GdkEvent *event;
+
+  event = gdk_event_new (GDK_CONFIGURE);
+
+  event->configure.window = g_object_ref (window);
+  event->configure.send_event = FALSE;
+  event->configure.x = window->x;
+  event->configure.y = window->y;
+  event->configure.width = window->width;
+  event->configure.height = window->height;
+
+  gdk_event_put (event);
+  gdk_event_free (event);
+}
 
 static void
 move_native_children (GdkWindow *private)
@@ -5992,7 +6010,10 @@ move_native_children (GdkWindow *private)
 				   child->width, child->height);
 	}
       else
-	move_native_children  (child);
+        {
+          configure_native_child (child);
+          move_native_children (child);
+        }
     }
 }
 
@@ -6080,8 +6101,7 @@ gdk_window_move_resize_internal (GdkWindow *window,
 			       window->x, window->y,
 			       window->width, window->height);
     }
-  else if (old_abs_x != window->abs_x ||
-	   old_abs_y != window->abs_y)
+  else
     move_native_children (window);
 
   if (expose)
